0_backup/v6/printform-js/DEVELOPER_BOOK.md
# Developer Handbook

## Quick Setup
- Serve the repo with `python3 -m http.server 8000` (or `python -m http.server 8000`) and review pages at `http://localhost:8000/`.
- Or run the Vite dev server: `npm run dev`.
- Build the single-file bundle (needed after editing sources): `npm run build`.
- Use Chromium print preview as the source of truth; confirm widths stay below 750px.
- Run `npx eslint js/printform.js js/printform/**/*.js` (browser-targeted JS, double quotes) ahead of every commit.

## N-up (physical sheet packing)
- Set `data-n-up="2"` on the `.printform` to pack 2 logical pages into one physical page wrapper.
- Use `data-show-logical-page-number="y|n"` to control `data-page-number` / `data-page-total`.
- Use `data-show-physical-page-number="y|n"` to control `data-physical-page-number` / `data-physical-page-total`.

## Layout Processing Pipeline
- Printable layouts (`index001.html`–`indexXXX.html`, `example.html`) reside at the repo root; treat them as production assets.
- `formatAllPrintForms()` in `js/printform.js` clones the `.printform`, resolves `data-*` config, and stitches the output page by page (core pagination lives in `js/printform/formatter.js`).
- Sections map to headers (`.pheader`), doc info (`.pdocinfo*`), row headers (`.prowheader`), rows (`.prowitem`), PTAC rows (`.ptac-rowitem`), and footers (`.pfooter*`, `.pfooter_logo`, `.pfooter_pagenum`). Add new blocks within this taxonomy so pagination logic can detect them.
- Dummy fillers (`data-insert-dummy-row-item-while-format-table`, `data-insert-dummy-row-while-format-table`) smooth the last page. Update `data-height-of-dummy-row-item` whenever row height changes.

- Place the PTAC table after the final `.prowitem` and before footers. Keep the markup simple—`class="paper_width ptac"` plus a heading paragraph and successive `<p>` blocks, for example:
  ```html
  <table class="paper_width ptac">
    …
    <div style="padding:10px 0 15px 0;">
      <p style="font-weight:600;">Purchase Terms and Conditions (PTAC)</p>
      <p>Paragraph 1…</p>
      <p>Paragraph 2…</p>
    </div>
    …
  </table>
  ```
- `expandPtacSegments()` (`js/printform/formatter.js`) clones the PTAC for every content paragraph (splitting long paragraphs into ~200-word chunks), leaves the heading on the first block, and flags each clone as a `.ptac-rowitem`. Pagination then treats PTAC segments like any other row while keeping their class distinct.
- For a forced break, give the relevant clone (or upstream block) the `tb_page_break_before` class.
- To suppress `.prowheader` on a specific page, add `without_prowheader` (or `tb_without_rowheader`) on the row that starts that page (commonly paired with `tb_page_break_before`).
- If PTAC is absent the formatter skips expansion; no additional config is necessary.
- Set `data-repeat-ptac-rowheader="n"` when PTAC blocks should appear without the repeating `.prowheader`; pair it with `data-insert-ptac-dummy-row-items="n"` to suppress dummy fillers on PTAC-only pages. Leave both at `y` to retain legacy row layout (each `.ptac-rowitem` will inherit `.prowheader` just like `.prowitem`).

## PADDT pipeline notes
- `.paddt` tables are expanded into `.paddt-rowitem` segments (split by `data-paddt-max-words-per-segment`) and then rendered after all main rows and footers.
- PADDT pages always start on a new physical page; they only use `.pfooter_logo` and `.pfooter_pagenum` (business footers are skipped).
- Control PADDT layout with `data-repeat-paddt-rowheader`, `data-insert-paddt-dummy-row-items`, and the PADDT-only docinfo toggles (`data-repeat-paddt-docinfo*`).
- `data-repeat-paddt` is currently read but not consumed by the formatter; treat it as reserved until wired in.

## Dummy row + spacer flags
- `data-height-of-dummy-row-item` controls the fixed height used by dummy row items.
- `data-insert-dummy-row-item-while-format-table`, `data-insert-dummy-row-while-format-table`, `data-insert-footer-spacer-while-format-table`, and `data-insert-footer-spacer-with-dummy-row-item-while-format-table` govern how the remainder of each page is padded before footers.

## Maintaining printform.js
- Public API stays in `js/printform.js`; helpers live in `js/printform/*.js`.
- The distributable single-file bundle is `dist/printform.js` (generated by `vite build` / `npm run build`).
- New flags belong in `CONFIG_DESCRIPTORS` (`js/printform/config.js`) plus the `.printform` comment block in the relevant HTML sample.
- Extend `collectSections()` (`js/printform/formatter.js`) any time you invent a new section class or `data-*` flag.
- Enable `data-debug="y"` for verbose logs while troubleshooting, then turn it off before pushing.

## Workflow Tips
- Use a new `indexXXX.html` variant for smoke demos and document fresh flags in the `.printform` comment.
- Collect Chromium print preview screenshots (first/last page) plus testing notes for every PR.
- Leave `js/printform - Copy.js` untouched; it is the regression reference.
